# rest-narration/openapi-schema.yml
@@ -79,20 +79,16 @@ paths:
       summary: Generate an image from a narration
       requestBody:
         content:
-          text/plain:
+          application/json:
             schema:
-              pattern: \S
-              type: string
+              $ref: '#/components/schemas/ImageGenerationRequest'
             examples:
-              narration:
-                value: |-
-                  In the dark, shadowy alleys of Gotham City, a fierce battle unfolded between two formidable opponents. The towering, imposing figure known as Chewbacca faced off against the agile and mysterious Wanderer. The air crackled with tension as the two clashed, their powers contrasting starkly against each other.
-
-                  Chewbacca's sheer strength and ferocity were unmatched as he unleashed a flurry of powerful blows, his massive frame dominating the scene. In contrast, Wanderer's quick reflexes and cunning tactics kept him in the fight, dodging and weaving with grace and precision. The clash of styles made for a mesmerizing spectacle as the combatants danced around each other.
-
-                  Despite Wanderer's best efforts, it was clear that Chewbacca's overwhelming power was too much to handle. With a mighty roar, Chewbacca delivered a final, decisive blow that sent Wanderer crashing to the ground. The hero stood victorious, his victory a testament to his incredible strength and unwavering determination.
-
-                  As the dust settled and the citizens of Gotham City breathed a collective sigh of relief, Chewbacca stood tall, a beacon of hope in a city plagued by darkness. The defeated Wanderer, though vanquished, would always be remembered for his valiant effort in the face of insurmountable odds. And so, the tale of their epic clash would be etched into the annals of superhero lore, a testament to the eternal struggle between good and evil.
+              request:
+                value:
+                  narration: In the dark, shadowy alleys of Gotham City, a fierce battle
+                    unfolded between two formidable opponents.
+                  winnerPictureUrl: https://raw.githubusercontent.com/quarkusio/quarkus-super-heroes/characterdata/images/chewbacca--684239239428094811.jpg
+                  loserPictureUrl: https://raw.githubusercontent.com/quarkusio/quarkus-super-heroes/characterdata/images/wanderer-300775911119209178.jpg
         required: true
       responses:
         "200":
@@ -106,7 +102,7 @@ paths:
                   value:
                     imageUrl: https://oaidalleapiprodscus.blob.core.windows.net/private/org-GdpIlMzhC20CU6Tcnu4Qe6B4/user-ljypWMQk95mvH7oFhiClsWLf/img-2YLTLfddXEma581WvHxlOeM3.png?st=2024-03-08T17%3A24%3A42Z&se=2024-03-08T19%3A24%3A42Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-03-08T18%3A14%3A53Z&ske=2024-03-09T18%3A14%3A53Z&sks=b&skv=2021-08-06&sig=Lq0orGMjEy4JOv/xF6guJqx8c4Q7bRrKeAUNAyW2pbw%3D
         "400":
-          description: Invalid (or missing) narration
+          description: Invalid (or missing) request
 components:
   schemas:
     Fight:
@@ -138,6 +134,19 @@ components:
       type: object
       properties:
         imageUrl:
+          type: string
+    ImageGenerationRequest:
+      description: Request for image generation from a narration
+      required:
+      - narration
+      type: object
+      properties:
+        narration:
+          pattern: \S
+          type: string
+        winnerPictureUrl:
+          type: string
+        loserPictureUrl:
           type: string
     FightLocation:
       description: Location of a fight
